# pilot-hdc-pipelinewatch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  logger.py  pyproject.toml  worker_k8s_job_watch.py
.github/workflows/: hdc-pipeline.yml
pipelinewatch/: stream_watcher.py
tests/: conftest.py
tests/pipelinewatch/: test_stream_watcher.py
